--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 SECRETKEY=SUPERSECRETKEY
 PORT=3004
-MONGO_CNN=mongodb://admin:admin@localhost:27017/nutricion?authSource=admin
+MONGO_CNN=mongodb+srv://useradmin:useradmin@cluster0.ldz0ign.mongodb.net/
+# MONGO_CNN=mongodb://admin:admin@localhost:27017/nutricion?authSource=admin
